# crewAI-examples

test-job-posting/: README.md  pyproject.toml
test-job-posting/db/: chroma.sqlite3
test-job-posting/test-job-posting/: crew.py
test-job-posting/test-job-posting/config/: tasks.yaml
test-job-posting/test_job_posting/: crew.py  main.py
test-job-posting/test_job_posting/config/: agents.yaml  tasks.yaml
