[tool.poetry]
name = "test-job-posting"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = { extras = ["tools"], version = "^0.35.8" }
crewai-tools = "^0.4.6"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
test_job_posting = "test_job_posting.main:run"
train = "test_job_posting.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
